system_config_backup/iptables/rules.v4
# Generated by iptables-save v1.8.7 on Tue Feb 10 16:22:39 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 103.68.213.74/32 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -j ACCEPT
-A INPUT -s 103.68.213.6/32 -j ACCEPT
-A INPUT -s 103.68.213.7/32 -j ACCEPT
-A INPUT -s 103.68.213.74/32 -j ACCEPT
-A INPUT -s 8.8.8.8/32 -j ACCEPT
-A INPUT -s 8.8.4.4/32 -j ACCEPT
-A INPUT -s 1.1.1.1/32 -j ACCEPT
-A INPUT -s 103.68.212.0/24 -j ACCEPT
-A INPUT -s 103.68.213.0/24 -j ACCEPT
-A INPUT -j ACCEPT
-A INPUT -j ACCEPT
-A INPUT -s 103.68.213.74/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 103.68.213.74/32 -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -s 103.68.213.6/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 103.68.213.6/32 -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -s 103.68.213.7/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 103.68.213.7/32 -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -s 103.68.213.74/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 103.68.213.74/32 -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -s 8.8.8.8/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 8.8.8.8/32 -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -s 8.8.4.4/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 8.8.4.4/32 -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -s 1.1.1.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 1.1.1.1/32 -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5000 -m state --state NEW -m recent --set --name DEFAULT --mask 255.255.255.255 --rsource 
-A INPUT -p tcp -m tcp --dport 5000 -m state --state NEW -m recent --update --seconds 60 --hitcount 15 --name DEFAULT --mask 255.255.255.255 --rsource -j DROP
-A INPUT -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j DROP
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 103.68.213.74/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 103.68.213.74/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 103.68.213.6/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 103.68.213.6/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 103.68.213.7/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 103.68.213.7/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 103.68.213.74/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 103.68.213.74/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 8.8.8.8/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 8.8.8.8/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 8.8.4.4/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 8.8.4.4/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 1.1.1.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 1.1.1.1/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 103.68.212.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 103.68.212.0/24 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s 103.68.213.0/24 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 103.68.213.0/24 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -m hashlimit --hashlimit-upto 5000/sec --hashlimit-burst 2000 --hashlimit-mode srcip --hashlimit-name dns_flood --hashlimit-htable-expire 120000 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -m hashlimit --hashlimit-upto 100000/sec --hashlimit-burst 120000 --hashlimit-name dns_global --hashlimit-htable-expire 30000 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j DROP
-A INPUT -p tcp -m tcp --dport 53 -m connlimit --connlimit-above 10 --connlimit-mask 32 --connlimit-saddr -j REJECT --reject-with tcp-reset
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A INPUT -p icmp -j DROP
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j DROP
COMMIT
# Completed on Tue Feb 10 16:22:39 2026
# Generated by iptables-save v1.8.7 on Tue Feb 10 16:22:39 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 443
-A PREROUTING -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 80
-A PREROUTING -s 103.68.213.74/32 -p udp -m udp --dport 53 -j ACCEPT
-A PREROUTING -s 127.0.0.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A PREROUTING -s 127.0.0.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A PREROUTING -s 103.68.213.6/32 -p udp -m udp --dport 53 -j ACCEPT
-A PREROUTING -s 103.68.213.7/32 -p udp -m udp --dport 53 -j ACCEPT
-A PREROUTING -s 103.68.213.74/32 -p udp -m udp --dport 53 -j ACCEPT
-A PREROUTING -s 8.8.8.8/32 -p udp -m udp --dport 53 -j ACCEPT
-A PREROUTING -s 8.8.4.4/32 -p udp -m udp --dport 53 -j ACCEPT
-A PREROUTING -s 1.1.1.1/32 -p udp -m udp --dport 53 -j ACCEPT
-A PREROUTING -p udp -m udp --dport 53 -j REDIRECT --to-ports 53
-A PREROUTING -s 103.68.213.74/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A PREROUTING -s 127.0.0.1/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A PREROUTING -s 127.0.0.1/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A PREROUTING -s 103.68.213.6/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A PREROUTING -s 103.68.213.7/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A PREROUTING -s 103.68.213.74/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A PREROUTING -s 8.8.8.8/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A PREROUTING -s 8.8.4.4/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A PREROUTING -s 1.1.1.1/32 -p tcp -m tcp --dport 53 -j ACCEPT
-A PREROUTING -p tcp -m tcp --dport 53 -j REDIRECT --to-ports 53
-A PREROUTING -d 103.68.213.74/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A PREROUTING -d 103.68.213.74/32 -p tcp -m tcp --dport 443 -j ACCEPT
COMMIT
# Completed on Tue Feb 10 16:22:39 2026
