system_config_backup/iptables/rules.v6
# Generated by ip6tables-save v1.8.7 on Tue Feb 10 16:22:39 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 2001:df2:440:4444:b41c:a12:212:212/128 -j ACCEPT
-A INPUT -s 2001:df2:440:4444:b41c:a12:212:212/128 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 2001:df2:440:4444:b41c:a12:212:212/128 -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -s ::1/128 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s ::1/128 -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j DROP
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 2001:df2:440:4444:b41c:a12:212:212/128 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s 2001:df2:440:4444:b41c:a12:212:212/128 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -s ::1/128 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -s ::1/128 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -m hashlimit --hashlimit-upto 5000/sec --hashlimit-burst 2000 --hashlimit-mode srcip --hashlimit-name dns6_flood --hashlimit-htable-expire 120000 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
COMMIT
# Completed on Tue Feb 10 16:22:39 2026
# Generated by ip6tables-save v1.8.7 on Tue Feb 10 16:22:39 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -s 2001:df2:440:4444:b41c:a12:212:212/128 -p udp -m udp --dport 53 -j ACCEPT
-A PREROUTING -s ::1/128 -p udp -m udp --dport 53 -j ACCEPT
-A PREROUTING -p udp -m udp --dport 53 -j REDIRECT --to-ports 53
-A PREROUTING -s 2001:df2:440:4444:b41c:a12:212:212/128 -p tcp -m tcp --dport 53 -j ACCEPT
-A PREROUTING -s ::1/128 -p tcp -m tcp --dport 53 -j ACCEPT
-A PREROUTING -p tcp -m tcp --dport 53 -j REDIRECT --to-ports 53
-A PREROUTING ! -d 2001:df2:440:4444:b41c:a12:212:212/128 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 80
-A PREROUTING ! -d 2001:df2:440:4444:b41c:a12:212:212/128 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 443
COMMIT
# Completed on Tue Feb 10 16:22:39 2026
